backend/backend-ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-mongo-ingress
  namespace: backend
spec:
  ingressClassName: nginx
  rules:
  - host: rakanprojects.com
    http:
      paths:
      - path: /items
        pathType: Prefix
        backend:
          service:
            name: mongo-backend-service
            port:
              number: 80
